# calculator

./: .gitmodules  CMakeLists.txt  README.md  install.sh
src/: main.cpp
src/abstract_visitor/: Expressions.hpp  Visitor.hpp  VisitorConcrete.hpp  abstract_visitor.hpp  expressions.hpp  visitor.hpp
src/static_visitor/: Expressions.hpp  expressions.hpp  static_visitor.hpp
tests/: CMakeLists.txt  abstract_visitor_test.hpp  static_visitor_test.hpp  visitor_tests_main.cpp
